<resources>
    <string name="app_name">PRM392_Proj</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">"Username"</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">"Confirm Password"</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_signup">"Sign Up"</string>
    <string name="welcome">"Welcome back!"</string>
    <string name="signup_header">"Create an account"</string>
    <string name="signup_subheader">"Let's help you get started"</string>
    <string name="tos_accept">"Accept Terms of Service"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>